# sputnikvm-sgx

./: .drone.yml  Cargo.toml
precompiled/modexp/: Cargo.toml
precompiled/modexp/src/: lib.rs
src/: lib.rs  memory.rs  params.rs  pc.rs  stack.rs  transaction.rs
src/commit/: account.rs
src/eval/: lifecycle.rs  mod.rs  util.rs
src/eval/run/: system.rs
src/patch/: mod.rs  precompiled.rs
