[package]
name = "sputnikvm"
version = "0.10.1"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/ETCDEVTeam/sputnikvm"
keywords = ["no_std", "ethereum"]

[lib]
name = "sputnikvm"

[dependencies]
sha3 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
ripemd160 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
digest = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
etcommon-block-core = { version = "0.3", git = "https://github.com/mesalock-linux/etcommon-rs-sgx" }
etcommon-rlp = { version = "0.2", git = "https://github.com/mesalock-linux/etcommon-rs-sgx" }
etcommon-bigint = { version = "0.2", features = ["rlp"], git = "https://github.com/mesalock-linux/etcommon-rs-sgx" }

etcommon-block = { version = "0.5", optional = true, git = "https://github.com/mesalock-linux/etcommon-rs-sgx" }
libsecp256k1 = { version = "0.3", optional = true, git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx" }
log = { git = "https://github.com/mesalock-linux/log-sgx" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#etcommon-hexutil = "0.2"

[features]
default = ["std", "rust-secp256k1", "mesalock_sgx"]
#c-secp256k1 = ["secp256k1-plus", "etcommon-block/c-secp256k1"]
rust-secp256k1 = ["libsecp256k1", "etcommon-block/rust-secp256k1"]
std = ["etcommon-block-core/std", "etcommon-rlp/std", "etcommon-bigint/std", "etcommon-block", "mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "std"]

[workspace]
members = [
#  "./jsontests",
#  "./regtests",
#  "./gethrpc",
#  "./stateful",
#  "./cli",
  "./precompiled/modexp",
#  "./precompiled/bn128",
#  "./network/foundation",
#  "./network/classic",
#  "./network/ellaism",
#  "./network/musicoin",
#  "./network/expanse",
#  "./network/ubiq",
]
